mac/run.sh can now run the code in batch mode for different energies, particles, sheilding arrangements and number of events. the construction and sim files were modified to take the ordering of layers as an argument and parse them intorespective material list the output files from each thread are combined as output_${PARTICLE}_${ENERGY}keV_${ORDER}_${NUMOFEVENTS}evt.root

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,12 @@ file(GLOB MACRO_FILES
 	"mac/*.mac"
 )
 
+file(GLOB BASH_FILES
+	"mac/*.sh"
+)
+
 file(COPY ${MACRO_FILES} DESTINATION ${PROJECT_BINARY_DIR})
+file(COPY ${BASH_FILES} DESTINATION ${PROJECT_BINARY_DIR})
 
 file(GLOB DATA_FILES
 	"dat/*.dat"
